--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Cryptography in practise
-description: A short description of this site's purpose
+title: Cross platform cryptography
+description: crytpographic routines for exchange between platforms
+theme: jekyll-theme-modernist
 kramdown:
   syntax_highlighter: rouge
